Style desktop-design

--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
       rel="stylesheet"
     />
     <!-- CSS Stylesheet -->
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
+
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/coffee-favicon-32px.png"
+    />
 
     <title>Odin | Signup Form</title>
   </head>
 
   <body>
     <main>
+      <h1 class="visually-hidden">Sign Up Form</h1>
+
       <div class="card__container">
         <div class="card__img">
           <div class="card__img-content">
@@ -30,52 +40,70 @@
 
         <section>
           <div class="card__contents">
-            <p>
-              Become a Busy Bean Member of The Busy Bean and unlock a world of
-              exclusive benefits. Enjoy personalized recommendations, discounts
-              on your favorite beverages, and early access to limited-edition
-              blends. Join us today for a delightful coffee experience like no
-              other!
-            </p>
+            <div class="card__text">
+              <p>
+                Become a Busy Bean Member of The Busy Bean and unlock a world of
+                exclusive benefits. Enjoy personalized recommendations, discounts
+                on your favorite beverages, and early access to limited-edition
+                blends.
+              </p>
+              <p>Join us <i>today</i> for a delightful coffee experience
+                like no other!</p>
+            </div>
 
             <div class="card__form">
-              <p>Let's get brewing!</p>
-
+              <h2>Let's get brewing!</h2>
               <form action="#">
-                <div class="form__input">
-                  <label for="first_name">* First name</label>
-                  <input
-                    type="text"
-                    name="first-name"
-                    id="first-name"
-                    required
-                  />
+                <div class="list-1">
+                  <div class="form">
+                    <label for="first_name">* First name</label>
+                    <input
+                      type="text"
+                      name="first-name"
+                      id="first-name"
+                      required
+                    />
+                  </div>
+                  <div class="form">
+                    <label for="last_name">Last name</label>
+                    <input type="text" name="last-name" id="last-name" />
+                  </div>
                 </div>
 
-                <div class="form__input">
-                  <label for="last_name">Last name</label>
-                  <input type="text" name="last-name" id="last-name" />
+                <div class="list-2">
+                  <div class="form">
+                    <label for="email">* Email</label>
+                    <input type="email" name="email" id="email" required />
+                  </div>
+                  <div class="form">
+                    <label for="phone-number">Phone number</label>
+                    <input type="tel" pattern="^\d{4}-\d{3}-\d{4}$" minlength="9" maxlength="11" />
+                  </div>
                 </div>
 
-                <div class="form__input">
-                  <label for="email">* Email</label>
-                  <input type="email" name="email" id="email" required />
-                </div>
-
-                <div class="form__input">
-                  <label for="phone-number">Phone number</label>
-                  <input type="text" minlength="9" maxlength="9" />
-                </div>
-
-                <div class="form__input">
-                  <label for="pasword">* Password</label>
-                  <input
-                    type="password"
-                    name="password"
-                    id="password"
-                    required
-                    minlength="8"
-                  />
+                <div class="list-3">
+                  <div class="form">
+                    <label for="password">* Password</label>
+                    <input
+                      class="error"
+                      type="password"
+                      name="password"
+                      id="password"
+                      required
+                      minlength="8"
+                    />
+                  </div>
+                  <div class="form">
+                    <label for="confirm_pasword">* Confirm Password</label>
+                    <input
+                      class="error"
+                      type="password"
+                      name="confirm_password"
+                      id="confirm_password"
+                      required
+                      minlength="8"
+                    />
+                  </div>
                 </div>
               </form>
             </div>
