--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="card__container">
         <div class="card__img">
           <div class="card__img-content">
-            <img src="images/coffee-icon.png" alt="" width="120rem" />
+            <img src="images/coffee-icon.png" alt="" class="coffee-icon" />
             <a href="#">The Busy Bean</a>
           </div>
         </div>
@@ -43,12 +43,14 @@
             <div class="card__text">
               <p>
                 Become a Busy Bean Member of The Busy Bean and unlock a world of
-                exclusive benefits. Enjoy personalized recommendations, discounts
-                on your favorite beverages, and early access to limited-edition
-                blends.
+                exclusive benefits. Enjoy personalized recommendations,
+                discounts on your favorite beverages, and early access to
+                limited-edition blends.
               </p>
-              <p>Join us <i>today</i> for a delightful coffee experience
-                like no other!</p>
+              <p>
+                Join us <i>today</i> for a delightful coffee experience like no
+                other!
+              </p>
             </div>
 
             <div class="card__form">
@@ -77,7 +79,12 @@
                   </div>
                   <div class="form">
                     <label for="phone-number">Phone number</label>
-                    <input type="tel" pattern="^\d{4}-\d{3}-\d{4}$" minlength="9" maxlength="11" />
+                    <input
+                      type="tel"
+                      pattern="^\d{4}-\d{3}-\d{4}$"
+                      minlength="9"
+                      maxlength="11"
+                    />
                   </div>
                 </div>
 
@@ -106,11 +113,11 @@
                   </div>
                 </div>
               </form>
-            </div>
-            <button class="card__button">Create Account</button>
-            <p class="card__login">
+              <button class="card__button">Create Account</button>
+              <p class="card__login">
               Already have an account? <span><a href="#">Log in</a></span>
             </p>
+            </div>
           </div>
         </section>
       </div>
