--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
   </head>
 
   <body>
+    <!-- Main Content -->
     <main>
+      <!-- Visually Hidden element -->
       <h1 class="visually-hidden">Sign Up Form</h1>
 
+      <!-- Card Container & Image -->
       <div class="card__container">
         <div class="card__img">
           <div class="card__img-content">
@@ -38,6 +41,7 @@
           </div>
         </div>
 
+        <!-- Card Section & Text contents -->
         <section>
           <div class="card__contents">
             <div class="card__text">
@@ -53,6 +57,7 @@
               </p>
             </div>
 
+            <!-- Form Section -->
             <div class="card__form">
               <h2>Let's get brewing!</h2>
               <form action="#">
@@ -113,6 +118,7 @@
                   </div>
                 </div>
               </form>
+              <!-- Button & Login Section -->
               <button class="card__button">Create Account</button>
               <p class="card__login">
               Already have an account? <span><a href="#">Log in</a></span>
